# interpreter

./: .gitignore  Makefile  README.md  doc.html  dune  dune-project  lfeqc.opam  main.ml
programs/: MTG_9-8.lfeqc  MTG_9-8.mdeq  basic.lfeqc  code_gen.lfeqc  code_gen.mdeq  demo.lfeqc  demo.mdeq  equality_types.lfeqc  power.lfeqc  stages.mdeq  surjective.mdeq  tests.mdeq
src/: algorithmic_equivalence.ml  algorithmic_reduction.ml  algorithmic_typing.ml  classifier_modules.ml  dune  environment.ml  eval.ml  lexer.mll  lfeqc.ml  mdeq.ml  parser.mly  syntax.ml  tyenv.ml
test/: dune  equivalence_test.ml  eval_test.ml  main_test.ml  reduction_test.ml  syntax_test.ml  tester.ml  typing_test.ml
